src/test/deca/syntax/invalid/created/testOpArith/IncrementationJava.deca
// Description :
//    Test invalide : Opération d'incrémentation sur une constante
//
// Résultats :
//    Erreur contextuelle
//    Ligne 10:  mismatched input '+' expecting {'(', 'new', 'this', 'readFloat', 'readInt', 'null', 'true', 'false', '-', '!', IDENT, INT, FLOAT, STRING}

{
    int x = 0;
    x++;
}


